--- a/public/friends.html
+++ b/public/friends.html
@@ -4,24 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/png" href="img/stempower-logo.png" />
+        <link rel="icon" type="image/png" href="img/logo.png" />
         <link rel="stylesheet" href="css/style.css">
-        <title>STEMPOWERher</title>
+        <title>cmd-f: STEMPOWERher</title>
       </head>
 
       <body>
         <header>
             <nav class="header__nav">
               <div class="header__logo">
-                <img src="img/stempower-logo.png" alt="STEMPOWER-her Logo" style=" height: 50%;">
+                <img src="img/logo.png" alt="STEMPOWER-her Logo" style=" height: 50%;">
                 <h4 data-aos="fade-down"  >STEMPOWER-her</h4>
                 
               </div>
 
               <ul class="header__menu" data-aos="fade-down">
                 
-                <a href="index.html" class="blob-btn">
-                    Home
+                <a href="register.html" class="blob-btn">
+                    Sign Up
                     <span class="blob-btn__inner">
                       <span class="blob-btn__blobs">
                         <span class="blob-btn__blob"></span>
