--- a/public/timeline3.html
+++ b/public/timeline3.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Data Science Interview Prep Timeline</title>
+  <link rel="icon" type="image/png" href="./img/logo.png" />
   <link rel="stylesheet" href="timeline.css">
+  <title>cmd-f: STEMPOWERher</title>
 </head>
 
 <body>
   <section class="timeline">
   
-  <h1>Data Science Interview Prep Timeline</h1>
+  <h1>Machine Learning/Data engineer Interview Prep Timeline</h1>
   
   <ul>
     <li>
