--- a/public/topmatches.html
+++ b/public/topmatches.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STEMPOWERher</title>
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="topmatches.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="img/stempower-logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
+    <title>cmd-f: STEMPOWERher</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Raleway&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -34,7 +34,7 @@
                 <p>Data scientist</p>
                 <p>A data scientist gathers and analyzes large sets of structured and unstructured data, developing algorithms and predictive models to extract valuable insights from the data.</p>
             </div>
-            <a href="routeB.html" class="btn">
+            <a href="timeline2.html" class="btn">
                 Learn More
                 
               </a>
@@ -46,7 +46,7 @@
                 <p>Back end developer</p>
                 <p>A back end developer is responsible for server-side web application logic and integration of the work front-end developers do.</p>
             </div>
-            <a href="routeC.html" class="btn">
+            <a href="timeline3.html" class="btn">
                 Learn More
               </a>
         </div>
