--- a/public/cards.html
+++ b/public/cards.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>STEMPOWERher</title>
     <link rel="stylesheet" href="cards.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="img/stempower-logo.png" />
+    <link rel="icon" type="image/png" href="img/logo.png" />
+    <title>cmd-f: STEMPOWERher</title>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&family=Raleway&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
