--- a/public/timeline1.html
+++ b/public/timeline1.html
@@ -11,7 +11,7 @@
 <body>
   <section class="timeline">
   
-  <h1>Data Science Interview Prep Timeline</h1>
+  <h1>Data Analyst Interview Prep Timeline</h1>
   
   <ul>
     <li>
